# reacher-bc-robustness

./: .gitignore  README.md  colab_script_runner.ipynb  pyproject.toml  reacher_bc_robustness_colab.ipynb  requirements.txt  unitree_g1_mujoco_colab.ipynb  unitree_g1_mujoco_train_colab.ipynb  unitree_g1_mujoco_train_v2_colab.ipynb
artifacts/: eval_results.csv  report.md
scripts/: 01_collect_demos.py  02_train_bc.py  03_evaluate_robustness.py  04_plot_results.py  05_make_report.py  06_push_report.py  07_render_rollout.py  unitree_g1_mujoco_ppo_train.py  unitree_g1_mujoco_render.py  unitree_g1_mujoco_smoke_test.py  unitree_g1_render_trained_ppo.py
src/reacher_bc/: __init__.py  core.py
