[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reacher-bc-robustness"
version = "0.1.0"
description = "Behavior cloning robustness evaluation on MuJoCo Reacher."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

